order cards alphabetically and fix title baseline alignment of ‘google drive cms’

--- a/src/css/all.css
+++ b/src/css/all.css
@@ -220,7 +220,7 @@ pre {
 
 .project.google-drive-cms h4 {
   font-size: 24px;
-  margin-top: 19px;
+  margin-top: 7px;
 }
 .card {
   background: #fff;
